--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 Depends: subversion, mercurial, git-core, bzr, python-yaml, python-vcstools, python-rosinstall
-Suite: lucid oneiric precise quantal wheezy
+Suite: lucid oneiric precise quantal raring saucy wheezy
 XS-Python-Version: >= 2.6
