fixing python version rule

--- a/stdeb3.cfg
+++ b/stdeb3.cfg
@@ -2,4 +2,4 @@
 Package: python3-wstool
 Depends: subversion, mercurial, git-core, bzr, python3-yaml, python3-vcstools, python3-rosinstall
 Suite: trusty
-X-Python-3Version: >= 3.3
+X-Python3-Version: >= 3.3
