--- a/stdeb3.cfg
+++ b/stdeb3.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
 Package: python3-wstool
 Depends: subversion, mercurial, git-core, bzr, python3-yaml, python3-vcstools
-Suite: trusty
+Suite: precise quantal raring saucy trusty wheezy jessie
 X-Python3-Version: >= 3.3
