--- a/stdeb2.cfg
+++ b/stdeb2.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 Depends: subversion, mercurial, git-core, bzr, python-yaml, python-vcstools
-Suite: lucid oneiric precise quantal raring saucy wheezy
+Suite: lucid oneiric precise quantal raring saucy trusty wheezy jessie
 XS-Python-Version: >= 2.6
