add missing version dependency on python3-vcstools >= 0.1.34 in stdeb files

--- a/stdeb2.cfg
+++ b/stdeb2.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
-Depends: subversion, mercurial, git-core, bzr, python-yaml, python-vcstools
+Depends: subversion, mercurial, git-core, bzr, python-yaml, python-vcstools (>= 0.1.34)
 Suite: lucid oneiric precise quantal raring saucy trusty wheezy jessie
 XS-Python-Version: >= 2.6
