--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ python:
 install:
 # develop seems to be required by travis since 02/2013
   - python setup.py build develop
-  - sudo gpg --keyserver hkp://subkeys.pgp.net --recv-keys 16126D3A3E5C1192
-  - sudo gpg --export --armor 16126D3A3E5C1192 | sudo apt-key add -
+  - gpg --keyserver hkp://subkeys.pgp.net --recv-keys 16126D3A3E5C1192
+  - gpg --export --armor 16126D3A3E5C1192 | sudo apt-key add -
   - sudo apt-get clean
   - sudo apt-get install -qq zsh
   - sudo pip install vcstools nose-cov coverage pyyaml coveralls
