Add conflicts to stdeb.cfg

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,7 @@
 [DEFAULT]
 Depends: subversion, mercurial, git-core, bzr, python-yaml, python-vcstools (>= 0.1.34)
 Depends3: subversion, mercurial, git-core, bzr, python3-yaml, python3-vcstools (>= 0.1.34)
+Conflicts: python3-wstool
+Conflicts3: python-wstool
 Suite: oneiric precise quantal raring saucy trusty utopic vivid wheezy jessie
 X-Python3-Version: >= 3.2
