add Ubuntu Zesty(17.04) and Debian Stretch(9)

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -3,5 +3,5 @@ Depends: subversion, mercurial, git-core, bzr, python-yaml, python-vcstools (>= 
 Depends3: subversion, mercurial, git-core, bzr, python3-yaml, python3-vcstools (>= 0.1.38)
 Conflicts: python3-wstool
 Conflicts3: python-wstool
-Suite: oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety wheezy jessie
+Suite: oneiric precise quantal raring saucy trusty utopic vivid wily xenial yakkety zesty wheezy jessie stretch
 X-Python3-Version: >= 3.2
