Add wheel support and improve Travis build times (#114)
* Create requirement files and enable wheels

* Simplify .travis.yml

Do not install zsh, allowing the Travis build to
be a quicker containerised build without sudo access.

Move the installation of wstool into the build script,
as failure to install is a local problem and not an upstream
problem, if all dependencies were successfully installed in
the install stage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ python:
   - "2.7"
   - "3.4"
   - "3.5"
-# command to install dependencies
-install:
-  - python setup.py install
-  - sudo apt-get clean
-  - sudo apt-get update && sudo apt-get install -qq zsh
-  - python -m pip install vcstools nose coverage pyyaml coveralls
+
+# Add test requirements; travis will do the rest
+before_install:
+  - cat requirements-test.txt >> requirements.txt
+
 # command to run tests
 script:
+  - python setup.py install
   - python -c 'import sys; print(sys.path)'
   - python -c 'import coverage'
   - python -m nose --with-coverage --cover-package=wstool test/local
