NOBUG: Documentation, modernize test setup using pyenv/tox

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
-*.orig
-*.swp
-*.pyc
+*#
 *.DS_Store
-*~
-*.log
-src/wstool.egg-info/*
-build/*
-dist/*
-.coverage
+*.coverage
 *.deb
+*.egg-info
+*.eggs
+*.log
+*.orig
+*.pyc
+*.swp
 *.tgz
-doc-pak
+*~
+.tox
+build/*
 description-pak
+dist
+doc-pak
+nosetests.xml
