--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,5 @@
 [bdist_wheel]
 universal = 1
+
+[aliases]
+test = nosetests --with-coverage --cover-package=wstool --where=test --cover-min-percentage=80
