--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,15 @@
+include *.py
+include LICENSE
 recursive-include completion *
 recursive-include doc *
 include requirements.txt
+include requirements-test.txt
+
+global-exclude .tox
+global-exclude *~
+global-exclude __pycache__
+global-exclude .coverage
+global-exclude *.py[co]
+global-exclude *.db
+global-exclude .git*
+global-exclude *.orig
