NOBUG: check dist in tox

--- a/tox.ini
+++ b/tox.ini
@@ -13,3 +13,4 @@ envlist = py27, py34, py35, py36
 commands =
   pip install .[test]
   {envpython} setup.py test
+  py36: {envpython} setup.py sdist bdist_wheel
